0.24    
        Fix to recent changes so minor changes don't mask major ones.
        Fix supersearch.cgi to use a template instead of CGI.pm to avoid
          weird errors, also turned it into a module and added tests.

0.23    4 August 2003
        Removed the "POST_CHOMP" option as it was messing up textareas, added
        a test to make sure this doesn't reoccur.

0.22    4 August 2003
        Fixed bug with usernames containing spaces in recent changes/userstats.

        Try out create_makefile_pl => "passthrough" in Build.PL

        Minor fixes to tests to make them work with newest UseMod formatter.

	Prevented "Edit this page" from showing up on category indexes.

	Set TT "POST_CHOMP" option to strip unnecessary newlines from HTML.

        Fixed CPAN bug #3085 - quotes in change summary box.

        Added openguides_version template variable and added it to page
        footer (CPAN request 3110).

0.21    17 July 2003
        We no longer autogenerate a Makefile.PL, since it doesn't pick up
        all the questions that need to be asked.  Sorry.  Use Module::Build
        as detailed in INSTALL, since you won't be able to get the right
        version of Text::WikiFormat installed without it in any case.

        Added version number to CGI.pm prereq as Alex McLintock hit a
        version that didn't have unescape.

        Added a link on RecentChanges to the RSS version, and put an
        autodiscovery tag for the RSS in the head section.

	Changed diff feature to hide checksums, which aren't necessary for 
        the user to see. Fixed a minor bug in the node history template so
        that the diff links compare the selected version against the previous
        one, not the original one every time.

0.20    10 July 2003
        Fixed all the email addresses to openguides-dev@openguides.org.

0.19    10 July 2003
        Extra checks that script_url ends in a '/'.

        Fixed small bug with edit conflict form - map link field was missing.