@@ -58,5 +58,6 @@ t/31_supersearch.t
 t/41_pubcrawl.t
 t/51_diff.t
 t/61_bug_textareas.t
+t/62_bug_os_coords.t
 t/templates/15_test.tt
 wiki.cgi
